# maestro

./: .gitignore  README.md  main.py  pyproject.toml
example/: README.md
src/: __init__.py
src/core/: __init__.py  actor.py  packet.py  runtime.py  types.py
src/orchestrator/: __init__.py  daemon.py  engine.py  setup.py  spec.py  templates.py  validator.py  wizard.py
src/providers/: __init__.py  base.py  claude_cli.py  codex_cli.py  deterministic.py  gemini_cli.py
tools/: __init__.py  check.py
